--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/geo_flake_b&w.png">
 		<style> 
 		    #one {
             background-image: url('images/WEI_Python_Backg.png');
