--- a/Women_Empowerment.html
+++ b/Women_Empowerment.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="images/geo_flake_b&w.png">
 		<style>
 			.content2 {
             background-color: rgba(0, 0, 0, 0.55); /* Dark background color  */
