update bio, email links

--- a/Pig_E_Bank.html
+++ b/Pig_E_Bank.html
@@ -197,7 +197,7 @@
 									Washington, PA 15301
 								</li>
 								<li class="icon solid fa-phone">(724) 787-9773</li>
-								<li class="icon solid fa-envelope"><a href="aaronlmanzano@gmail.com">AaronLManzano@gmail.com</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:aaronlmanzano@gmail.com">AaronLManzano@gmail.com</a></li>
 								<li class="icon solid fa-gem"><a href="resume.html" target="_blank">Resume</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/aaronmanzano" target="_blank">Linkedin</a></li>
 								<li class="icon brands fa-github"><a href="https://github.com/tendyzen" target="_blank">GitHub</a></li>
