--- a/index.html
+++ b/index.html
@@ -143,24 +143,28 @@
 								</div>
 							</div>
 								<div class="no-background">
-								<h2 style="font-size: 45px; text-align: center;">Aaron Manzano</h2>
-								<p style="font-size: 30px; text-align: center;"><strong>Manzano Analytics</strong></p>
+									<h2 style="font-size: 40px; display: inline-block; white-space: nowrap;">
+										<span style="font-weight: normal;">Aaron Manzano | </span>
+										<span style="font-weight: bold;">Manzano Analytics</span>
+									</h2>
+							<p style="text-transform: none; font-size: 28px; text-align: center; letter-spacing: 12px;">Boasting a 40% CAGR over 6 years...</p>
 							</div>
 							<div class="content1">
 								<p style="text-transform: none;font-size: 30px; text-align: center;">Data Alchemist | Investment Manager</p>
-								<p style="text-transform: none; font-size: 22px;">Boasting a 40% CAGR over 6 years</p>
 									<h3 class="major" style="font-size: 28px; text-align: center; text-transform: lowercase;">"...the map is not the territory"</h3>
-									<p style="text-transform: none; font-size: 22px;">Data isn't just the new oil, it's also the map of a New World. 
-										In the complex landscape of modern data analysis, we are bearing the fruits of deep understanding sown by the 
-										father of semantics, and Korzybski's words ought to ring truer than ever. Maps are not the underlying territory, words
-										are not the underlying reality, and data is not the underlying decision landscape. A map is only a reflection of the territory,
-										and so we tread carefully, knowing we are driving through the rear-view mirror. It takes 
-										a keen eye for detail and a steadfast approach to avoid being fooled by randomness. Separating the noise from the 
-										signal is what I do best--gleaning actionable insights motivates and enlivens me.</p>
+									<p style="text-transform: none; font-size: 22px;">Data analytics isn't just the new oil; it's also the map of a New World. 
+										In the complex landscape of modern data analysis, we are bearing the fruits of deep understanding sown by the father of
+										 semantics, and Korzybski's words ought to ring truer than ever. Maps are not the underlying territory, words are not 
+										 the underlying reality, and data insights are not the underlying decision landscape. A map is only a reflection of the
+										  territory, and so we tread carefully, knowing we are driving through the rear-view mirror. It takes a keen eye for 
+										  detail and a steadfast approach to avoid being fooled by randomness. Separating the noise from the signal, engaging 
+										  in statistical analysis, and employing predictive modeling are what I do best--gleaning actionable insights motivates
+										   and enlivens me.</p>
 
-										<p style="text-transform: none; font-size: 22px;">My expertise lies in deriving real strategic value from the 
-											intricacies of data, a skill honed over years of navigating its complexities. This ability seamlessly aligns 
-											with my creative vision and long-term goals, driving me to seek out dynamic teams at the forefront of data-driven innovation.										</p>
+										<p style="text-transform: none; font-size: 22px;">My expertise lies in deriving real strategic value from the intricacies 
+											of data, a skill honed over years of navigating its complexities. This ability seamlessly aligns with my creative 
+											vision and long-term goals, driving me to seek out dynamic teams at the forefront of data-driven innovation.
+										</p>
 
 										<p style="text-transform: none; font-size: 22px;">I’m eager to bring these skills and more to a collaborative 
 											environment dedicated to pushing the boundaries of data solutions. Let's connect and explore how my unique 
@@ -172,26 +176,26 @@
 							<ul class="icons" style="text-align: center; padding-top: 20px; padding-bottom: -110px">
 								<li>
 									<div class="icon-container">
-										<a class="icon solid fa-envelope" href="aaronlmanzano@gmail.com"></a>
-										<span>Email</span>
+										<a class="icon solid fa-envelope" href="mailto:aaronlmanzano@gmail.com"></a>
+										<a href="mailto:aaronlmanzano@gmail.com">Email</a>
 									</div>
 								</li>
 								<li>
 									<div class="icon-container">
 										<a class="icon solid fa-gem" href="resume.html" target="_blank"></a>
-										<span>Resume</span>
+										<a href="resume.html" target="_blank">Resume</a>
 									</div>
 								</li>
 								<li>
 									<div class="icon-container">
 										<a class="icon brands fa-linkedin" href="https://www.linkedin.com/in/aaronmanzano" target="_blank"></a>
-										<span>LinkedIn</span>
+										<a href="https://www.linkedin.com/in/aaronmanzano" target="_blank">LinkedIn</a>
 									</div>
 								</li>
 								<li>
 									<div class="icon-container">
 										<a class="icon brands fa-github" href="https://github.com/tendyzen" target="_blank"></a>
-										<span>GitHub</span>
+										<a href="https://github.com/tendyzen" target="_blank">GitHub</a>
 									</div>
 								</li>
 							</ul>
@@ -356,7 +360,7 @@
 										Washington, PA 15301
 									</li>
 									<li class="icon solid fa-phone">(724) 787-9773</li>
-									<li class="icon solid fa-envelope"><a href="aaronlmanzano@gmail.com">AaronLManzano@gmail.com</a></li>
+									<li class="icon solid fa-envelope"><a href="mailto:aaronlmanzano@gmail.com">AaronLManzano@gmail.com</a></li>
 									<li class="icon solid fa-gem"><a href="resume.html" target="_blank">Resume</a></li>
 									<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/aaronmanzano" target="_blank">Linkedin</a></li>
 									<li class="icon brands fa-github"><a href="https://github.com/tendyzen" target="_blank">GitHub</a></li>
