--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<div class="inner">
+						<div class="inner" style="width: auto;">
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html"><img src="images/geo_flake_b&w.png" style="width: 20px; height: auto; vertical-align: middle;"> Home</a></li>
@@ -171,9 +171,9 @@
 											perspective can elevate your team's success.</p>
 							</div>
 							<div class="photo">
-								<img src="images/Headshot_Site.png" style="width: 420px; height: auto; display: block; margin: 0 auto; padding-top: 40px;">
+								<img src="images/Headshot_Site.png" style="width: 520px; height: auto; display: block; margin: 0 auto; padding-top: 90px;">
 							</div>
-							<ul class="icons" style="text-align: center; padding-top: 20px; padding-bottom: -110px">
+							<ul class="icons" style="text-align: center; padding-top: 100px; padding-bottom: 0px; letter-spacing: 10px;">
 								<li>
 									<div class="icon-container">
 										<a class="icon solid fa-envelope" href="mailto:aaronlmanzano@gmail.com"></a>
