--- a/Rockbuster.html
+++ b/Rockbuster.html
@@ -51,7 +51,7 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<div class="inner">
+						<div class="inner" style="width: auto;">
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html"><img src="images/geo_flake_b&w.png" style="width: 20px; height: auto; vertical-align: middle;"> Home</a></li>
