update title icon, get in touch section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<div class="inner" >
 							<div class="inner" style="display: block; justify-content: space-between; align-items: center;">
 								<div class="logo">
-									<img src="images/geo_flake_b&w.png" style="text-align: center; width: 280px; height: auto; display: block; margin: 0 auto;">
+									<img src="images/Geoflake_Title.png" style="text-align: center; width: 420px; height: auto; display: block; margin: 0 auto;">
 								</div>
 							</div>
 								<div class="no-background">
@@ -199,6 +199,9 @@
 									</div>
 								</li>
 							</ul>
+						</div>
+						<div style="text-align: center;">
+							<img src="images/geo_flake_b&w.png" style="width: 100px; height: auto; display: inline-block; vertical-align: middle;">
 						</div>
 					</section>
 
@@ -329,7 +332,12 @@
 					<section id="footer">
 						<div class="content2">
 							<div class="column">
-								<h2 class="major">Get in touch</h2>
+								<h2 class="major">
+									<div style="text-align: center; font-size: 25px;">Get in touch</div>
+									<div style="text-align: center;">
+										<img src="images/geo_flake_b&w.png" style="width: 80px; height: auto;">
+									</div>
+								</h2>
 								<p style="font-size: 19px;">As a versatile data analyst and seasoned investment manager, my successful background in finance, energy, and telecommunications uniquely equips me with a valuable skill set for applied data analytics.</p>
 								<p style="font-size: 19px;">My ultimate goal is to secure a full-time data analyst position, leveraging my diverse skill set to contribute meaningfully to your team's success. Let's connect and explore how my exceptional background can drive insights and innovation in your organization.</p>
 								<form method="post" action="#">
