update hover over and fix formatting

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 		.no-background {
 			text-transform: none;
 		}
+        .hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+        }
+
 
 
 
@@ -211,7 +215,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="Women_Empowerment.html" class="image"><img src="images/WEI_K_Clusters_countries.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black; "/></a>
+									<a href="Women_Empowerment.html" class="image"><img src="images/WEI_K_Clusters_countries.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black;  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 									<div class="content">
 										<h2 class="major">Women's Empowerment and GDP Analysis</h2>
 										<p> This is a five-decade examination of the interconnection between the Global Women's Empowerment Index and GDP Per Capita. The central proposition suggests a mutually reinforcing association between economic well-being and Women's Rights. Nevertheless, our unwavering dedication is to adopt a rigorous, data-centric approach, unveiling noteworthy discoveries.</p>
@@ -223,7 +227,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="Rockbuster.html" class="image"><img src="images/Rockbuster_Corr_ROI.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black"/></a>
+									<a href="Rockbuster.html" class="image"><img src="images/Rockbuster_Corr_ROI.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black;  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 									<div class="content">
 										<h2 class="major">RockBuster and XGBoost</h2>
 										<p> This cost-benefit analysis is in a context of a fictional, globally operating movie rental business on the brink of expansion. Its primary goal is to employ strategic decisions that result in an augmentation of overall profitability. eXtreme Gradient Boosted decision tree modeling is employed, and feature importance values are used to guide the interpretation of the machine learning insights.</p>
@@ -235,7 +239,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="Influenza.html" class="image"><img src="images/Flu_Intro.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black"/></a>
+									<a href="Influenza.html" class="image"><img src="images/Flu_Intro.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black;  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 									<div class="content">
 										<h2 class="major">Influenza Season Staffing</h2>
 										<p>Every year, hospitals are faced with staffing challenges due to the influx of influenza patients. This prescriptive analysis uses USA CDC data and seeks to define and direct staff from low-need states to high-need states. </p>
@@ -246,7 +250,7 @@
 						<!-- PLUS -->
 							<section id="threeplus" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="Beecher.html" class="image"><img src="images/Beecher_Tree_Map.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black"/></a>
+									<a href="Beecher.html" class="image"><img src="images/Beecher_Tree_Map.png" alt="" style="width: 300px; height: 300px; border-radius: 0; border: 2px solid black;  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 									<div class="content">
 										<h2 class="major">Archaelogical Analysis</h2>
 										<p>A descriptive analysis of animal bones from a Historic Archaeological site in Louisville, Kentucky. </p>
@@ -296,25 +300,25 @@
 									<p style="font-size: 20px;">Further analysis using Python, Tableau, SQL, and Excel. Click for information on process and final deliverables. </p>
 									<section class="features">
 										<article>
-											<a href="Instacart.html" class="image"><img src="images/Instacart_Bubble.png" alt="" /></a>
+											<a href="Instacart.html" class="image"><img src="images/Instacart_Bubble.png" alt="" style="  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 											<h3 class="major">Instacart Customer Segmentation</h3>
 											<p> Using Python and Tableau to understand customer spending behavior and drive revenue in multiple ways.</p>
 											<a href="Instacart.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="Gameco.html" class="image"><img src="images/Gameco_Bar.png" alt="" style="padding-top: 30px; padding-bottom: 40px;"/></a>
+											<a href="Gameco.html" class="image"><img src="images/Gameco_Bar.png" alt="" style="padding-top: 30px; padding-bottom: 40px;  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 											<h3 class="major">GameCo Marketing Strategy</h3>
 											<p> Multivariate Excel analysis of video game sales to inform a successful marketing strategy for North America, Europe, and Japan.</p>
 											<a href="Gameco.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="Euro_Tuition.html" class="image"><img src="images/Tuition_Dash.png" alt="" style="padding-top: 40px; padding-bottom: 30px;"/></a>
+											<a href="Euro_Tuition.html" class="image"><img src="images/Tuition_Dash.png" alt="" style="padding-top: 40px; padding-bottom: 30px;  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 											<h3 class="major">European Education and GDP</h3>
 											<p> Using Python to prepare data for a Tableau dashboard illustrating the relationship between GDP per capita and higher education cost.</p>
 											<a href="Euro_Tuition.html" class="special">Learn more</a>
 										</article>
 										<article>
-											<a href="Pig_E_Bank.html" class="image"><img src="images/Pig_E_Icon.png" alt="" /></a>
+											<a href="Pig_E_Bank.html" class="image"><img src="images/Pig_E_Icon.png" alt="" style="  transition: transform 0.6s ease-in-out;" class="hover-zoom"/></a>
 											<h3 class="major">Pig E. Bank Churn Modeling</h3>
 											<p> Modeling customer behavior with Python's XGBoost library and SHAP values for feature importance.</p>
 											<a href="Pig_E_Bank.html" class="special">Learn more</a>
