--- a/Beecher.html
+++ b/Beecher.html
@@ -21,6 +21,9 @@
 			color: #ffffff;
             border-radius: 10px; /* Add rounded corners for aesthetic appeal */
         }
+		.hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+        }
 
 		</style>
 
@@ -29,7 +32,8 @@
 		<header class="banner">
 			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -150px; width: 350px; height: auto;">
 				<a href="index.html">
-					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%;">
+					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%; transition: transform 0.6s ease-in-out;"
+					class="hover-zoom">
 				</a>
 				</div>
 			</header>
