--- a/Gameco.html
+++ b/Gameco.html
@@ -21,6 +21,10 @@
 			color: #ffffff;
             border-radius: 10px; /* Add rounded corners for aesthetic appeal */
         }
+       		.hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+			transition: transform 0.6s ease-in-out;
+        }
 
 		</style>
 
@@ -29,7 +33,9 @@
 		<header class="banner">
 			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -150px; width: 350px; height: auto;">
 				<a href="index.html">
-					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%;">
+					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" 
+					style="width: 100%; height: 100%; text-decoration: none; outline: none; transition: transform 0.6s ease-in-out;" 
+					class="hover-zoom">
 				</a>
 				</div>
 			</header>
@@ -77,7 +83,7 @@
 								<h2>Gameco Marketing Strategy</h2>
 								<p>Global video game sales analysis.</p>
 							</div>
-							<div class="image-container" style="position: absolute; right: 100px; top: 270px;">
+							<div class="image-container" style="position: absolute; right: 30px; top: 270px;">
 								<img src="images/Gameco_intro.png" style="width: 380px; height: auto; border-width: 5px;">
 							</div>
 						</header>
