--- a/Influenza.html
+++ b/Influenza.html
@@ -21,15 +21,19 @@
 			color: #ffffff;
             border-radius: 10px; /* Add rounded corners for aesthetic appeal */
         }
+		.hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+        }
 
 		</style>
 
 	</head>
 	<body>
 		<header class="banner">
-			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -150px; width: 350px; height: auto;">
+			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -10px; width: 350px; height: auto;">
 				<a href="index.html">
-					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%;">
+					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%; transition: transform 0.6s ease-in-out;"
+					class="hover-zoom">
 				</a>
 				</div>
 			</header>
@@ -72,7 +76,7 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-						<header style="text-align:center; position: relative;">
+						<header style="text-align:center; position: relative; margin-top: -100px;">
 							<div class="content2">
 								<h2>Influenza Staffing Strategy</h2>
 								<p>CDC dataset analysis of flu season in the US.</p>
