--- a/Rockbuster.html
+++ b/Rockbuster.html
@@ -22,6 +22,10 @@
 			color: #ffffff;
             border-radius: 10px; /* Add rounded corners for aesthetic appeal */
         }
+		.hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+			
+        }
 
 		</style>
 		
@@ -30,12 +34,12 @@
 		<header class="banner">
 			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -150px; width: 350px; height: auto;">
 				<a href="index.html">
-					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%;">
+					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%; transition: transform 0.6s ease-in-out;"
+					class="hover-zoom">
 				</a>
 				</div>
 			</header>
 	</body>
-
 	<body class="is-preload" style="background-image: url(images/mountains_stars_2.jpeg); background-size: cover;">
 
 		<!-- Page Wrapper -->
@@ -74,12 +78,12 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-						<header style="text-align:center; position: relative;">
+						<header>
 							<div class="content2">
 								<h2>RockBuster and XGBoost</h2>
 								<p>Modeling the most important features for rental profitability.</p>
 							</div>
-							<div class="image-container" style="position: absolute; right: 50px; top: 190px;">
+							<div class="image-container" style="position: absolute; right: 50px; top: 280px;">
 								<img src="images/Rockbuster_intro 2.png" style="width: 350px; height: auto; border-width: 5px;">
 							</div>
 						</header>
