--- a/Women_Empowerment.html
+++ b/Women_Empowerment.html
@@ -21,15 +21,19 @@
 			color: #ffffff;
             border-radius: 10px; /* Add rounded corners for aesthetic appeal */
         }
+		.hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+        }
 
 		</style>
 
 	</head>
 	<body>
 		<header class="banner">
-			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -150px; width: 350px; height: auto;">
+			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -10px; width: 350px; height: auto;">
 				<a href="index.html">
-					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%;">
+					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" 
+					style="width: 100%; height: 100%; transition: transform 0.3s ease-in-out;" class="hover-zoom">
 				</a>
 				</div>
 			</header>
@@ -73,13 +77,13 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-						<header style="text-align:center; position: relative;">
-							<div class="content2">
+						<header style="display: flex; align-items:center; justify-content: center;">
+							<div class="content2" style="margin-top: -150px;">
 								<h2>The Economy of Women's Rights</h2>
 								<p>5 decade journey into Women's Rights and GDP.</p>
 							</div>
-							<div class="image-container" style="position: absolute; right: 40px; top: 170px;">
-								<img src="images/WEI_intro.png" style="width: 360px; height: auto; border-width: 5px;">
+							<div class="image-container" style="position: absolute; right: 0px; top: 270px;">
+								<img src="images/WEI_intro.png" style="width: 350px; height: auto; border-width: 5px;">
 							</div>
 						</header>
 
