--- a/resume.html
+++ b/resume.html
@@ -12,12 +12,22 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/png" href="images/geo_flake_b&w.png">
+		<style>
+        .hover-zoom:hover {
+            transform: scale(1.1); /* Increase size by 10% on hover */
+        }
+
+		</style>
+
 	</head>
 	<body>
 		<header class="banner">
-			<div style="padding-top: 100px; padding-left: 200px; margin-bottom: -150px; width: 350px; height: auto;">
-				<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" style="width: 100%; height: 100%;">
-			</div>
+			<div>
+				<a href="index.html">
+					<img src="images/geo_flake_b&w.png" alt="Manzano Analytics Icon" 
+					style="margin-left: 100px; margin-top: 80px; width: 250px; height: auto; transition: transform 0.6s ease-in-out;" class="hover-zoom">
+				</a>
+				</div>
 			</header>
 	</body>
 
@@ -55,8 +65,8 @@
 
 				<!-- Wrapper -->
 				<section id="wrapper">
-					<header style="text-align:center; position: relative;">
-						<div class="content2">
+					<header style="text-align:center; position: relative; margin-top: -100px;">
+						<div class="content2" >
 							<h2>Resume</h2>
 							<p>Aaron Manzano's Resume, 2013-2023</p>
 						</div>
