fix broken message action

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 								</h2>
 								<p style="font-size: 19px;">As a versatile data analyst and seasoned investment manager, my successful background in finance, energy, and telecommunications uniquely equips me with a valuable skill set for applied data analytics.</p>
 								<p style="font-size: 19px;">My ultimate goal is to secure a full-time data analyst position, leveraging my diverse skill set to contribute meaningfully to your team's success. Let's connect and explore how my exceptional background can drive insights and innovation in your organization.</p>
-								<form method="post" action="#">
+								<form method="post" action="mailto:aaronlmanzano@gmail.com">
 									<div class="fields">
 										<div class="field">
 											<label for="name">Name</label>
