update contact form with formspree

--- a/Beecher.html
+++ b/Beecher.html
@@ -189,7 +189,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p> A seasoned and self-made fund manager, averaging a 40% CAGR for six years, and demonstrating an expertise in applied data analytics..</p>
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/mayrjnpo">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
